# TTS-Project-Cmake_Version

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/more/dsi/iii/com/hts_tts_test2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/at/ftw/speechsynthesis/: FTWTTSEngine.java
app/src/main/java/more/dsi/iii/com/hts_tts_test2/: MainActivity.java
app/src/main/jni/: SALB.cpp  SALB.h  native-lib.cpp
app/src/main/jni/cli/: CMakeLists.txt
app/src/main/jni/engine/manager/: CMakeLists.txt
app/src/main/jni/engine/manager/src/: TTSManager.cpp  TextAnalyzer.cpp
app/src/main/jni/engine/synthesis/hts_engine/: CMakeLists.txt
app/src/main/jni/engine/text/flite/: CMakeLists.txt
app/src/main/jni/engine/text/internal/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/more/dsi/iii/com/hts_tts_test2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
